// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`justifi-season-interruption-insurance-core loads and sets the quote to state correctly 1`] = `
<justifi-season-interruption-insurance-core auth-token="123" class="body" style="display: block;">
  <style></style>
  <div>
    <h2 class="fs-5 fw-bold header-2 pb-3" part="heading-2 heading text color font-family">
      Add Registration Protection
    </h2>
    <small part="text color font-family">
      <p>
        Protect your registration and get your money back in the event of unforeseen circumstances that prevent participation, including sickness (including COVID-19), injury, inclement weather, transportation, job loss and other covered reasons.
      </p>
    </small>
    <form-control-radio label="Accept coverage for $0.79" name="opt-in" value="true"></form-control-radio>
    <form-control-radio label="Decline coverage" name="opt-in" value="false"></form-control-radio>
    <div class="invalid-feedback" part="text-danger text color font-family" style="display: none;">
      Please select an option
    </div>
    <small part="text color font-family">
      <p>
        Selecting yes constitutes my electronic signature. I confirm that I have read, understand and agree to the
        <a href="https://partner.battleface.com/library/vertical-insure-season-cancellation-and-interruption-es" part="text color font-family" target="_blank">
          policy terms and conditions
        </a>
        , and
        <a href="https://legal.verticalinsure.com/Important-Notices-and-Disclosures-Everspan-Season-Can.pdf" part="text color font-family" target="_blank">
          important notices and disclosures
        </a>
        , which includes fraud warnings, privacy notice, and consent to electronic signature and delivery.
      </p>
      <p>
        battleface Travel Insurance plans are underwritten by Everspan Insurance Company (an AZ Corporation, NAIC# 24961), with administrative office at One World Trade Center, 41st Floor, New York, NY 10007. Plans are offered and administered by battleface Insurance Services LLC, 45 East Lincoln Street, Columbus, OH 43215, National Producer Number 18731960 (FL License number L107363/CA License number 0M75381).
      </p>
    </small>
  </div>
</justifi-season-interruption-insurance-core>
`;

exports[`justifi-season-interruption-insurance-core should display loading state correctly 1`] = `
<justifi-season-interruption-insurance-core auth-token="123" class="body" style="display: block;">
  <style></style>
</justifi-season-interruption-insurance-core>
`;

exports[`justifi-season-interruption-insurance-core validates that a selection was made 1`] = `
<justifi-season-interruption-insurance-core auth-token="123" class="body" style="display: block;">
  <style></style>
  <div>
    <h2 class="fs-5 fw-bold header-2 pb-3" part="heading-2 heading text color font-family">
      Add Registration Protection
    </h2>
    <small part="text color font-family">
      <p>
        Protect your registration and get your money back in the event of unforeseen circumstances that prevent participation, including sickness (including COVID-19), injury, inclement weather, transportation, job loss and other covered reasons.
      </p>
    </small>
    <form-control-radio label="Accept coverage for $0.79" name="opt-in" value="true"></form-control-radio>
    <form-control-radio label="Decline coverage" name="opt-in" value="false"></form-control-radio>
    <div class="invalid-feedback" part="text-danger text color font-family" style="display: block;">
      Please select an option
    </div>
    <small part="text color font-family">
      <p>
        Selecting yes constitutes my electronic signature. I confirm that I have read, understand and agree to the
        <a href="https://partner.battleface.com/library/vertical-insure-season-cancellation-and-interruption-es" part="text color font-family" target="_blank">
          policy terms and conditions
        </a>
        , and
        <a href="https://legal.verticalinsure.com/Important-Notices-and-Disclosures-Everspan-Season-Can.pdf" part="text color font-family" target="_blank">
          important notices and disclosures
        </a>
        , which includes fraud warnings, privacy notice, and consent to electronic signature and delivery.
      </p>
      <p>
        battleface Travel Insurance plans are underwritten by Everspan Insurance Company (an AZ Corporation, NAIC# 24961), with administrative office at One World Trade Center, 41st Floor, New York, NY 10007. Plans are offered and administered by battleface Insurance Services LLC, 45 East Lincoln Street, Columbus, OH 43215, National Producer Number 18731960 (FL License number L107363/CA License number 0M75381).
      </p>
    </small>
  </div>
</justifi-season-interruption-insurance-core>
`;
